--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ version="1.0.0"
 displayName="Demonic"
 credits="Created using mod maker MCreator - https://mcreator.net/about"
 displayURL="https://mcreator.net"
-authors="Þðà, MCreator"
+authors="Xponer2, "
 
 [[dependencies.demonic]]
     modId="minecraft"
